public/style.css
.container {
    display: grid;
    grid-template-columns: 1fr 4fr 0.75fr;
    height: 100vh;
}

header {
    display: grid;
    align-items: center;
    text-align: center;
    grid-template-columns: 1fr 3fr 1fr;
    width: 100%;
    height: 60px;
    background-color: #062759;
    color: white;
    margin-bottom: 2px;
    box-shadow: 0px 3px 3px  #142337;
}
footer a, header a {
    color: white;
}
.left_header {
    justify-content: center;
    margin-left: 20px;
    display: flex;
    gap: 10px;
}
.left_header img {
    width: 60px;
    height: 60px;
}
.leddit {
    color: #d93900;
}
.headerText {
    display: flex;
    align-items: center;
}
.headerBtns {
    display: flex;
    gap: 15px;
    justify-content: center;
}
.headerlink {
    background-color: #d93900;
    padding: 4px;
    border-radius: 5px ;
    color: white;
    font-weight: 600;
}

footer {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    background-color: #062759;
    font-size: 1.25rem;
    color: white;
    height: 60px;
    box-shadow: 0px -3px 3px  #142337;
}
.delete_container {
    text-align: center; margin-top: 20%;

}
.warning {
    font-size: 3rem; 
    color: red;
    font-weight: 800;
}
.serverBody {
    height: 100%;
    padding-top: 35px;
    text-align: center;
}
.serverBody img {
    margin: 10px 0 10px 0;
}
.deleteBtns {
    padding: 20px; 
    font-size: 2rem; 
    font-weight: 700; 
    border-radius: 20px;
}
.serverText {
    font-size: 2rem;
}
.allPost {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}
.postBox {
    width: 550px;
    border-radius: 40px;
    border: 1px solid black;
    background-color: rgb(212, 212, 212);
    color: black;
    display: flex; 
    justify-content: space-around;
}
.postBox section {
    margin: 5px;
}
.postBox section p {
    margin: 0;
}
.vote {
    display: flex;
    justify-content: center;
    gap: 5px;
    margin: 4px;
}
.vote button {
    padding: 0 5px 0 5px;
    background-color: #062759;
}
.vote span {
    font-size: 1.3rem;
}
.comments {
    display: flex; 
    flex-direction: column; 
    flex-wrap: wrap;
}
.plus {
    text-align: center;
}
.create {
    visibility: hidden;
}
.logout {
    background: none;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
    background-color: #d93900;
    padding: 4px;
    border-radius: 5px ;
    color: white;
    font-weight: 600;
}
.searchBar {
    border-radius: 20px;
    padding: 10px;
    width: 250px;
    text-align: center;
    font-size: 1rem;
}
.left {
    border-right: 2px solid #d93900;
}
.aside_section {
    padding-top: 15px;
    text-align: center;
    border-left: 2px solid #d93900;
}
.create {
    margin-bottom: 20px;
}
.display_create {
    margin-top: 5px;
}
.update_server {
    display: flex;
    gap: 5px;
    flex-direction: column;
}
.favourites_display {
    display: flex;
    flex-direction: column;
    gap: 5px;
    font-size: 1.5rem;
}
ul {
    list-style: none;
}
.favDiv {
    display: flex;
    justify-content: center;
    gap: 10px;
    align-items: center;
}
.favDiv div {
    margin: 5px;
    font-size: 1.5rem;
}
.emoji {
    font-size:30px;
}
.layoutBody {
    margin-top: 50px;
    text-align: center;
    height: 100vh;
}
.commentTextBox {
    margin-top: 5px;
    padding: 4px 8px 4px 8px;
    border-radius: 30px;
    font-size: 1rem;
}
.commentText {
    margin-top: 5px;
}
.commentDiv {
    display: flex;
    justify-content: center;
    gap: 15px;
}
.aboutBody {
    margin-top: 50px;
    margin-left: 20%;
    height: 100vh;
}
.homeChat {
    font-size: 1.5rem;
}
.createBody {
    height: 100vh;
    margin: 50px 75px 0 75px;
    text-align: center;
}
.createBody h1 {
    color: #d93900;
    font-size: 2.15rem;
}
.createBody form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 1.2rem;
}
.createBody form input {
    padding: 4px;
    border-radius: 20px;
    text-align: center;
    font-weight: 700;
}
.createBody form button {
    align-self: center;
    padding: 4px;
    border-radius: 20px;
    width: 160px;
}
.createBody h1 {
    margin-bottom: 10px;
}
.addFav {
    background-color: #062759;
}

